display of containers fix so that option-container could be invisible at the page load, navlinks added

--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,7 @@ button:hover {
   );
   color: #2c0000;
   padding: 0 25px;
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
 }
